--- a/src/AppBundle/Resources/translations/messages.it.xlf
+++ b/src/AppBundle/Resources/translations/messages.it.xlf
@@ -6,172 +6,172 @@
     </header>
     <body>
       <trans-unit id="a54df7f0b810414467735acc4f3ca4f9" resname="My Decks">
-        <source>My Decks</source>
-        <target>__My Decks</target>
+        <source>I Miei Mazzi</source>
+        <target>__I Miei Mazzi</target>
       </trans-unit>
       <trans-unit id="41bee85f0a581e16440caf695024e618" resname="My Teams">
-        <source>My Teams</source>
-        <target>__My Teams</target>
+        <source>Le Mie Squadre</source>
+        <target>__Le Mie Squadre</target>
       </trans-unit>
       <trans-unit id="e002169a321adf2814cd157a8dd0ecc5" resname="Decklists">
-        <source>Decklists</source>
-        <target>__Decklists</target>
+        <source>Liste dei Mazzi</source>
+        <target>__Liste dei Mazzi</target>
       </trans-unit>
       <trans-unit id="cd81f9f55969c822377f076017bb3484" resname="Cards">
-        <source>Cards</source>
-        <target>__Cards</target>
+        <source>Carte</source>
+        <target>__Carte</target>
       </trans-unit>
       <trans-unit id="34e80a799d144cfe4af46815e103f017" resname="Reviews">
-        <source>Reviews</source>
-        <target>__Reviews</target>
+        <source>Recensioni</source>
+        <target>__Recensioni</target>
       </trans-unit>
       <trans-unit id="1f4da964f8eab62e96e8cfe406e44364" resname="Rules">
-        <source>Rules</source>
-        <target>__Rules</target>
+        <source>Regole</source>
+        <target>__Regole</target>
       </trans-unit>
       <trans-unit id="483a5da192f46e3cfe8391d3ef234fc4" resname="FAQs">
         <source>FAQs</source>
         <target>__FAQs</target>
       </trans-unit>
       <trans-unit id="8f7f4c1ce7a4f933663d10543562b096" resname="About">
-        <source>About</source>
-        <target>__About</target>
+        <source>Chi siamo?</source>
+        <target>__Chi siamo?</target>
       </trans-unit>
       <trans-unit id="db974238714ca8de634a7ce1d083a14f" resname="API">
         <source>API</source>
         <target>__API</target>
       </trans-unit>
       <trans-unit id="20b4f77bd00b4f63a49ec8e08f3bf6a6" resname="Cost">
-        <source>Cost</source>
-        <target>__Cost</target>
+        <source>Costi</source>
+        <target>__Costi</target>
       </trans-unit>
       <trans-unit id="9b57db6e9d84ba5f537ce97b13079736" resname="XP">
         <source>XP</source>
         <target>__XP</target>
       </trans-unit>
       <trans-unit id="5b388583a8c29ad05de31c7b1ca38146" resname="Willpower">
-        <source>Willpower</source>
-        <target>__Willpower</target>
+        <source>Volontà</source>
+        <target>__Volontà</target>
       </trans-unit>
       <trans-unit id="591a90c34f2dc753830b9bd6b5c6c815" resname="Intellect">
-        <source>Intellect</source>
-        <target>__Intellect</target>
+        <source>Intelletto</source>
+        <target>__Intelletto</target>
       </trans-unit>
       <trans-unit id="30ad1054cf7ad7636a26844a6f782e1f" resname="Combat">
-        <source>Combat</source>
-        <target>__Combat</target>
+        <source>Scontro</source>
+        <target>__Scontro</target>
       </trans-unit>
       <trans-unit id="241bb470b0110efc8b5609f7311b0bb1" resname="Agility">
-        <source>Agility</source>
-        <target>__Agility</target>
+        <source>Agilità</source>
+        <target>__Agilità</target>
       </trans-unit>
       <trans-unit id="605669cab962bf944d99ce89cf9e58d9" resname="Health">
-        <source>Health</source>
-        <target>__Health</target>
+        <source>Salute</source>
+        <target>__Salute</target>
       </trans-unit>
       <trans-unit id="ad34a9d5d87691c743dc42cbc5e8b783" resname="Sanity">
-        <source>Sanity</source>
-        <target>__Sanity</target>
+        <source>Sanità Mentale</source>
+        <target>__Sanità Mentale</target>
       </trans-unit>
       <trans-unit id="c8b01a3184580b42a0bfbc05d2dab784" resname="Fight">
-        <source>Fight</source>
-        <target>__Fight</target>
+        <source>Combatti</source>
+        <target>__Combatti</target>
       </trans-unit>
       <trans-unit id="fcebb8bec493a6678a2758580bee43f9" resname="Evade">
-        <source>Evade</source>
-        <target>__Evade</target>
+        <source>Eludi</source>
+        <target>__Eludi</target>
       </trans-unit>
       <trans-unit id="b9f24e83531326204197015b2f43a93f" resname="Damage">
-        <source>Damage</source>
-        <target>__Damage</target>
+        <source>Danni</source>
+        <target>__Danni</target>
       </trans-unit>
       <trans-unit id="6dd1b5ddcf2d141fa924bb9207874c6d" resname="Horror">
-        <source>Horror</source>
-        <target>__Horror</target>
+        <source>Orrori</source>
+        <target>__Orrori</target>
       </trans-unit>
       <trans-unit id="63af23acea82542bd29f7e5d19361805" resname="Doom">
-        <source>Doom</source>
-        <target>__Doom</target>
+        <source>Destini</source>
+        <target>__Destini</target>
       </trans-unit>
       <trans-unit id="60deea80d2e908af97e2c8c0da66949a" resname="Shroud">
-        <source>Shroud</source>
-        <target>__Shroud</target>
+        <source>Oscurità</source>
+        <target>__Oscurità</target>
       </trans-unit>
       <trans-unit id="140e5f509e8ff4ac1413a3170063af27" resname="Clues">
-        <source>Clues</source>
-        <target>__Clues</target>
+        <source>Indizi</source>
+        <target>__Indizi</target>
       </trans-unit>
       <trans-unit id="9046fcdec95378ce88a0879ebfc44475" resname="Test Icons">
-        <source>Test Icons</source>
-        <target>__Test Icons</target>
+        <source>Icone Abilità</source>
+        <target>__Icone Abilità</target>
       </trans-unit>
       <trans-unit id="0557fa923dcee4d0f86b1409f5c2167f" resname="Back">
-        <source>Back</source>
-        <target>__Back</target>
+        <source>Retro</source>
+        <target>__Retro</target>
       </trans-unit>
       <trans-unit id="b7a772bd89d5f4413e9e6373f8dede2d" resname="Your query didn't match any card.">
-        <source>Your query didn't match any card.</source>
-        <target>__Your query didn't match any card.</target>
+        <source>La ricerca non corrisponde ad alcuna carta.</source>
+        <target>__La ricerca non corrisponde ad alcuna carta.</target>
       </trans-unit>
       <trans-unit id="681aa47f963747cc19ec382e0c7944df" resname="Related Cards">
-        <source>Related Cards</source>
-        <target>__Related Cards</target>
+        <source>Carte Correlate</source>
+        <target>__Carte Correlate</target>
       </trans-unit>
       <trans-unit id="d9ed9cfb2b4c0bc9bc7e2208ee80aec0" resname="Member since">
-        <source>Member since</source>
-        <target>__Member since</target>
+        <source>Membro da</source>
+        <target>__Membro da</target>
       </trans-unit>
       <trans-unit id="3b8dacebcabd4075dc1dbd89f13a0178" resname="published decklists">
-        <source>published decklists</source>
-        <target>__published decklists</target>
+        <source>mazzi pubblicati</source>
+        <target>__mazzi pubblicati</target>
       </trans-unit>
       <trans-unit id="55ec6e23814c55c69572b48aafd4faf9" resname="One published decklist">
         <source>One published decklist</source>
         <target>__One published decklist</target>
       </trans-unit>
       <trans-unit id="1c5bc0508822392420c374b729785958" resname="published reviews">
-        <source>published reviews</source>
-        <target>__published reviews</target>
+        <source>recensioni pubblicate</source>
+        <target>__recensioni pubblicate</target>
       </trans-unit>
       <trans-unit id="f1b4b1a6504086c413e446914bcfee1d" resname="One published reviews">
         <source>One published reviews</source>
         <target>__One published reviews</target>
       </trans-unit>
       <trans-unit id="8d9bec4f224970e231041639de877092" resname="Reputation">
-        <source>Reputation</source>
-        <target>__Reputation</target>
+        <source>Reputazione</source>
+        <target>__Reputazione</target>
       </trans-unit>
       <trans-unit id="8b9c006d512295284b651b36cd6349a6" resname="Something about you">
-        <source>Something about you</source>
-        <target>__Something about you</target>
+        <source>Dicci qualcosa di te</source>
+        <target>__Dicci qualcosa di te</target>
       </trans-unit>
       <trans-unit id="ae3ef38738579f5c872777896ac4e8a0" resname="Be notified when a user comments one of your decklists">
-        <source>Be notified when a user comments one of your decklists</source>
-        <target>__Be notified when a user comments one of your decklists</target>
+        <source>Ricevi una notifica quando un utente lascia un commento su uno dei tuoi mazzi</source>
+        <target>__Ricevi una notifica quando un utente lascia un commento su uno dei tuoi mazzi</target>
       </trans-unit>
       <trans-unit id="d67d9db427c85b89f10737cdc923b611" resname="Be notified when a user also comments a decklist you commented">
-        <source>Be notified when a user also comments a decklist you commented</source>
-        <target>__Be notified when a user also comments a decklist you commented</target>
+        <source>Ricevi una notifica anche quando un utente lascia un commento su un mazzo che hai commentato</source>
+        <target>__Ricevi una notifica anche quando un utente lascia un commento su un mazzo che hai commentato</target>
       </trans-unit>
       <trans-unit id="c46d2731d32c14fd9b5b8d6372021d19" resname="Be notified when a user mentions you in a comment">
-        <source>Be notified when a user mentions you in a comment</source>
-        <target>__Be notified when a user mentions you in a comment</target>
+        <source>Ricevi una notifica quando un utente ti menziona in un commento</source>
+        <target>__Ricevi una notifica quando un utente ti menziona in un commento</target>
       </trans-unit>
       <trans-unit id="ef54f55d1717398848fc37eb0e1b309f" resname="Share your decks.">
-        <source>Share your decks.</source>
-        <target>__Share your decks.</target>
+        <source>Condividi i tuoi mazzi.</source>
+        <target>__Condividi i tuoi mazzi.</target>
       </trans-unit>
       <trans-unit id="808fc528a81ffee00ce69ee6c57ce9d6" resname="Select a faction color for your username">
-        <source>Select a faction color for your username</source>
-        <target>__Select a faction color for your username</target>
+        <source>Seleziona il colore di una fazione per il tuo nome utente</source>
+        <target>__Seleziona il colore di una fazione per il tuo nome utente</target>
       </trans-unit>
       <trans-unit id="c9cc8cce247e49bae79f15173ce97354" resname="Save">
-        <source>Save</source>
-        <target>__Save</target>
+        <source>Salva</source>
+        <target>__Salva</target>
       </trans-unit>
       <trans-unit id="f6039d44b29456b20f8f373155ae4973" resname="Username">
-        <source>Username</source>
-        <target>__Username</target>
+        <source>Nome Utente</source>
+        <target>__Nome Utente</target>
       </trans-unit>
       <trans-unit id="ce8ae9da5b7cd6c3df2929543a9af92d" resname="Email">
         <source>Email</source>
